# CRUD_usuarios_aws

./: Dockerfile  README.md  deploy.sh  pyproject.toml  read.md
deployment/: template.yaml
elements/: state_machine.json
src/handlers/: delete_user.py  get_user.py  validator.py  writer.py
src/models/: user.py
src/services/: logger.py  repository.py
test/: conftest.py  test_repository_update.py  test_validator.py
